# kaizen-example

./: .gitignore  Cargo.toml  README.md
keys/: keypair.json
lib/: Cargo.toml
lib/src/: authority.rs  lib.rs
native/: Cargo.toml
native/src/: main.rs
program/: Cargo.toml  build  deploy  release
program/src/: lib.rs
root/: index.html
simulator/: Cargo.toml
simulator/src/: main.rs
wasm/: Cargo.toml  build  build-dev
wasm/src/: lib.rs
