

[workspace]
members = [
    "native",
    "wasm",
    "simulator",
    "program",
]


[workspace.dependencies]
async-trait = "0.1.64"
borsh = "0.9.1"
borsh-derive = "0.9.1"
cfg-if = "1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
dynamic-nft = { path = "lib" }
inventory = "0.3.3"
js-sys = "0.3.61"
kaizen = { path = "../kaizen" }
rand = "0.8.5"
solana-program = "1.15.1"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ['io-util','time'] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
workflow-core = { path = "../workflow-rs/core" }
workflow-log = { path = "../workflow-rs/log" }
workflow-rpc = { path = "../workflow-rs/rpc" }
example = { path = "lib" }
