[package]
name = "lib"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.14.1"
# solana-program = { path="../../solana/sdk/program" }

# workflow-log = "0.1.0"
# workflow-core = "0.1.0"

workflow-log = { path = "../../workflow-log" }
workflow-core = { path = "../../workflow-core" }

workflow-allocator = { path = "../../workflow-allocator" }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
borsh = "0.9.3"
js-sys = "0.3.56"
cfg-if = "1.0.0"

thiserror = "1.0.32"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
# workflow-ux = { path = "../../workflow-ux" }
# workflow-html = { path = "../../workflow-html" }

# workflow-wasm = "0.1.0"
# workflow-wasm = { path = "../../workflow-wasm" }
# workflow-terminal = { path = "../../workflow-terminal" }
# workflow-async-trait = { path = "../../workflow-async-trait" }

# async-std = { version = "1.12.0", features = ['attributes'] }
# #async-trait = "0.1.56"
# convert_case = "0.5.0"
inventory = "0.2.3"
# lazy_static = "1.4.0"
# downcast = "0.11.0"
# owning_ref = "0.4.1"
# url = "2.3.1"
# chrono = "0.4"
# serde_json = "1.0.83"
# serde = "1.0.143"
# futures = "0.3.25"

# [target.'cfg(not(any(target_arch = "bpf", target_arch = "wasm32")))'.dependencies]

# [target.'cfg(not(target_arch = "bpf"))'.dependencies.web-sys]
# version = "0.3.56"
# features = [
#     'console',
#     'Document',
#     'Element',
#     'HtmlElement',
#     'HtmlLinkElement',
#     'HtmlImageElement',
#     'HtmlInputElement',
#     'HtmlHrElement',
#     'Node',
#     'NodeList',
#     'Window',
#     'InputEvent',
#     'MouseEvent',
#     'ErrorEvent',
#     'KeyEvent',
#     'CustomEvent',
#     'HtmlCollection',
#     'DomTokenList',
#     'SvgPathElement',
#     'SvgPoint',
#     'DomRect',
#     'TransitionEvent',
#     'MutationObserver',
#     'MutationObserverInit',
#     'MutationRecord',
#     'Location',
# ]
