[package]
name = "example"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.14.1"
workflow-log = { path = "../../workflow-log" }
workflow-core = { path = "../../workflow-core" }
workflow-allocator = { path = "../../workflow-allocator" }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
borsh = "0.9.1"
borsh-derive = "0.9.1"
js-sys = "0.3.56"
cfg-if = "1.0.0"

thiserror = "1.0.32"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
inventory = "0.2.3"
