[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
kaizen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
borsh.workspace = true
borsh-derive.workspace = true
js-sys.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
inventory.workspace = true
rand.workspace = true
