[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example = { path = "../lib" }
kaizen.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true

