[package]
name = "example-simulator"
version = "0.1.0"
edition = "2021"


[dependencies]
kaizen.workspace = true
example.workspace = true
workflow-core.workspace = true
workflow-rpc.workspace = true
workflow-log.workspace = true
async-trait.workspace = true
tokio.workspace = true
clap.workspace = true
thiserror.workspace = true
inventory.workspace = true
cfg-if.workspace = true
