[package]
name = "example-wasm"
version = "0.1.0"
description = "Workflow Allocator Example WASM Bindings"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"

workflow-allocator = { path = "../../workflow-allocator" }
example = { path = "../lib" }
